fix image sizes on mobile view adn add payment module in admin panel

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -2,6 +2,11 @@
         height: 220px;
         object-fit: cover;
       }
+    
+      .product-img{
+         padding: 0px 10px;
+
+       }
       .tracking-steps {
             display: flex;
             justify-content: space-between;
@@ -80,9 +85,9 @@
 
         /* ================= MOBILE PRODUCT IMAGES ================= */
         @media (max-width: 576px) {
-            .product-image {
-        height: 180px;
-    }
+         .product-image {
+            height: 180px;
+        }
 
          .product-title {
             font-size: 14px;
@@ -131,6 +136,13 @@
                 width: 100%;
                 display: flex;
                 justify-content: space-between;
+            }
+            #product-carousel img{
+                height:240px!important
+            }
+
+            #product-carousel .carousel-item {
+                padding: 0 38px;
             }
         }
 
